--- a/package.json
+++ b/package.json
@@ -1,12 +1,13 @@
 {
-  "name": "react-transition-group",
+  "name": "to-do-react-transition",
   "version": "0.1.0",
   "private": true,
   "dependencies": {
     "prop-types": "^15.6.1",
     "react": "^16.3.2",
     "react-dom": "^16.3.2",
-    "react-scripts": "1.1.4"
+    "react-scripts": "1.1.4",
+    "react-transition-group": "^2.3.1"
   },
   "scripts": {
     "start": "react-scripts start",
